# k-miner

./: CMakeLists.txt  README.md
clang-kernel-build/: Makefile.build.patch
include/Checker/: DoubleFreeChecker.h  DoubleLockChecker.h  KernelChecker.h  KernelCheckerAPI.h  MemLeakChecker.h  SrcSnkAnalysis.h  UseAfterFreeChecker.h  UseAfterReturnChecker.h  UseAfterReturnCheckerLite.h
include/KernelModels/: ContextBuilder.h  Driver.h  DriverBuilder.h  Initcall.h  InitcallBuilder.h  InitcallFactory.h  KernelContext.h  KernelContextFactory.h  KernelContextObj.h  KernelExtPass.h  KernelPartitioner.h  KernelSVFGBuilder.h  SyscallBuilder.h  Systemcall.h
include/SVF/MSSA/: MemRegion.h  SVFG.h  SVFGBuilder.h  SVFGNode.h  SVFGOPT.h  SVFGStat.h
include/SVF/MemoryModel/: ConsG.h  MemModel.h  PAG.h  PAGBuilder.h  PointerAnalysis.h  PointsToDS.h  SPAG.h
include/SVF/SABER/: CFLSolver.h  DoubleFreeChecker.h  LeakChecker.h  ProgSlice.h  SaberCheckerAPI.h  SrcSnkDDA.h  StackSrcSnkDDA.h.old  UseAfterReturnChecker.h.old
include/SVF/Util/: AnalysisUtil.h  Annotator.h  DPItem.h  ExtAPI.h  GraphUtil.h  PTACallGraph.h  PathCondAllocator.h  SCC.h
include/SVF/WPA/: Andersen.h  WPASolver.h
include/Util/: AnalysisContext.h  BasicTypes.h  Bug.h  CallGraphAnalysis.h  DebugUtil.h  DirRetAnalysis.h  InstrumentationUtil.h  KCFSolver.h  KDPItem.h  KMinerStat.h  KernelAnalysisUtil.h  LocalPtrAssignmentAnalysis.h  LockFinder.h  PAGAnalysis.h  PtrCallSetAnalysis.h  PtrToFuncAnalysis.h  ReportPass.h  SVFGAnalysisUtil.h  SyscallAPI.h  SystemInfoUtil.h
lib/: CMakeLists.txt
lib/Checker/: DoubleFreeChecker.cpp  DoubleLockChecker.cpp  KernelChecker.cpp  KernelCheckerAPI.cpp  MemLeakChecker.cpp  SrcSnkAnalysis.cpp  UseAfterFreeChecker.cpp  UseAfterReturnChecker.cpp  UseAfterReturnCheckerLite.cpp
lib/KernelModels/: ContextBuilder.cpp  DriverBuilder.cpp  Initcall.cpp  InitcallBuilder.cpp  InitcallFactory.cpp  KernelContext.cpp  KernelContextFactory.cpp  KernelExtPass.cpp  KernelPartitioner.cpp  KernelSVFGBuilder.cpp  SyscallBuilder.cpp
lib/SVF/: CMakeLists.txt
lib/SVF/MSSA/: MemRegion.cpp  SVFG.cpp  SVFGBuilder.cpp  SVFGStat.cpp
lib/SVF/MemoryModel/: ConsG.cpp  MemModel.cpp  PAG.cpp  PAGBuilder.cpp  PointerAnalysis.cpp
lib/SVF/SABER/: DoubleFreeChecker.cpp  LeakChecker.cpp  ProgSlice.cpp  SaberAnnotator.cpp  SaberCheckerAPI.cpp  SaberSVFGBuilder.cpp  SrcSnkDDA.cpp  StackSrcSnkDDA.cpp.old  UseAfterReturnChecker.cpp.old
lib/SVF/Util/: AnalysisUtil.cpp  ExtAPI.cpp  PathCondAllocator.cpp
lib/SVF/WPA/: Andersen.cpp  AndersenWave.cpp  FlowSensitive.cpp
lib/Util/: AnalysisContext.cpp  Bug.cpp  CallGraphAnalysis.cpp  DebugUtil.cpp  DirRetAnalysis.cpp  InstrumentationUtil.cpp  KMinerStat.cpp  KernelAnalysisUtil.cpp  LocalPtrAssignmentAnalysis.cpp  PAGAnalysis.cpp  PtrCallSetAnalysis.cpp  PtrToFuncAnalysis.cpp  ReportPass.cpp  SVFGAnalysisUtil.cpp  SyscallAPI.cpp
tests/: run_tests.sh
tests/demo/DFree/: 1  blist.txt  initcall_contexts.txt  log  log2  report.txt  report_new.txt  run.sh
tests/demo/DLOCK/: blist.txt  report.txt  run.sh  vmlinux_v3.19_min.bc
tests/demo/UAR/: initcall_contexts.txt  report.txt  run.sh  sinks.txt
tests/double_free/: report.txt  run_test.sh  test1.c  test10.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c  test8.c  test9.c
tests/double_lock/: Makefile  main.c  report.txt  run_test.sh  test1.c  test10.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c  test8.c  test9.c
tests/mem_leak/: report.txt  run_test.sh  test1.c
tests/use_after_free/: report.txt  run_test.sh  test1.c  test10.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c  test8.c  test9.c
tests/use_after_return/: main.c  report.txt  run_test.sh  test1.c  test10.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c  test8.c  test9.c
tests/use_after_return/use_after_return2/: Makefile  list.c  list.h  main.c
tools/: CMakeLists.txt  kminer.cpp
web_frontend/: KernelReportParser.py  KernelReport_v3.19.json  KernelReport_v4.10.json  KernelReport_v4.12.json  KernelReport_v4.2.json  KernelReport_v4.6.json  MemoryLeak.json  README  Report.py  SyscallReport.py  __init__.py  comment_db.json  mem_usage.txt
web_frontend/templates/: driver_report.html  err.html  header.html  index.html  kernel_schedule.html  mem_crpt_overview.html  overview.html  search_results.html  syscall_report.html
(+1 files in other folders)
